Switch to Hugging Face browser-based ML - no backend needed

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.16",
     "@tailwindcss/vite": "4.1.11",
+    "@xenova/transformers": "^2.6.0",
     "@typescript-eslint/visitor-keys": "^8.47.0",
     "@typescript-eslint/utils": "^8.47.0",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
